# Cryptographic-C---Toolkit

./: AUTHORS.md  LICENSE.md  README.md
LFSR/: CMakeLists.txt  LFSR.cc  MANUAL.md  README.md  TODO.md  aSyncLFSR.hh  maskntap32.hh
LFSR/doc/: LFSRDocumentation.md  LFSRRepresentation.md
LFSR/shiftGenerator/: shiftGenerator.sh  shiftHead.tpl  shiftTail.tpl
LFSR/src/: BerlekampMassey.cc  BerlekampMassey.hh  BerlekampMasseyOutput.cc  BerlekampMasseyOutput.hh  CCTkConfig.hh  CCTkConfig.hh.in  LFSR.cc  LFSR.hh  aSyncLFSR.cc  maskntap32.hh  maskntap64.hh
LFSR/test/: BerlekampMassey_test.cc  LFSR_test.cc  ReductionEquality_test.cc  ShortLFSR_test.cc  aSync_test.cc  mseq_test.cc  testLFSR.cc
LFSR/tools/: BerlekampMasseyMain.cc
